SonarLint changes